tests/positive/brak-declare.damn
[ 0 ]
BEGIN
   WRITE 0; 
END
