tests/negative/wrong-array-range.damn
[ Array index range is incorrect ]

DECLARE
    tab( 5:0 )
BEGIN
    WRITE tab(5);
END
